fix: Fix padding and image overlap in mobile devices

--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -198,7 +198,6 @@
 @media (max-width: 767px) {
 	.cartWrapper {
 		width: 100%;
-		padding-bottom: 8em;
 	}
 
 	.input {
