--- a/src/routes/home/Home.module.css
+++ b/src/routes/home/Home.module.css
@@ -9,7 +9,7 @@
 .mainWrapper {
 	height: 80%;
 	width: 100%;
-  max-width: 1600px;
+	max-width: 1600px;
 	display: flex;
 	align-items: center;
 	margin-left: auto;
@@ -20,7 +20,7 @@
 .homeHero {
 	display: flex;
 	flex-direction: column;
-  margin-top: 3em;
+	margin-top: 3em;
 	padding: 3em;
 	z-index: 1;
 }
@@ -80,11 +80,17 @@
 }
 
 @media (max-width: 767px) {
+	.homeHero a {
+		border-radius: 2em;
+		background-color: rgba(1, 49, 49, 1);
+		color: white;
+	}
+
 	.mainWrapper img {
 		right: 50%;
 		transform: translateX(50%);
 		bottom: 0;
-		height: 450px;
+		height: 370px;
 		width: auto;
 	}
 
@@ -102,7 +108,7 @@
 	.homeHero p {
 		font-size: 1rem;
 	}
-	
+
 	.homeHero a {
 		align-self: center;
 	}
